--- a/templates/proxysql.cnf.j2
+++ b/templates/proxysql.cnf.j2
@@ -86,6 +86,7 @@ mysql_query_rules:
     rule_id={{ loop.index }}
     match_pattern="{{ rule.match_pattern }}",
     destination_hostgroup={{ rule.destination_hostgroup | default(0) }}
+    cache_ttl={{ rule.cache_ttl | default(0) }}
   }
 {%   if not loop.last %},
 
